overlays/dev/frontend/merge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  labels:
    app: www
spec:
  ingressClassName: nginx
  rules:
  - host: www.dev.zanartcc.org
    http:
      paths:
      - backend:
          service:
            name: www-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.dev.zanartcc.org
    secretName: www-vzanartcc-net-tls
